--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -18,6 +18,6 @@
 
 div.body {
 	a img, img {
-		border: 3px solid $color_blue;
+		border: 3px solid #ddd;
 	}
 }
